# hugo

./: .actignore  .actrc  .env.example  .gitignore  .gitleaks.toml  .secrets.example  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Project Desription.md  README.md  dev.sh  eslint.config.js  go.mod  go.sum  lint-staged.config.js  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.claude/commands/: create_handoff.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: changeset-check.yml  ci.yml
.husky/: pre-commit  pre-push
backend/: README.md  pyproject.toml  requirements.txt
backend/configs/: default.yaml
backend/src/: config.py  events.py  main.py
backend/src/agent/: core.py  providers.py  tools.py
backend/src/api/: routes.py  schemas.py  websocket.py
backend/src/bridge/: openclaw.py  tool_registry.py  tools.py
backend/src/integrations/: base.py  calendar.py  obsidian.py  outlook.py  registry.py
backend/src/robot/: controller.py  simulator.py
backend/src/vision/: __init__.py  camera.py  gemini.py  mlx_vision.py  processor.py
backend/src/voice/: engine.py  fallback.py  personaplex.py  pipeline.py  stt.py  tts.py  vad.py
backend/tests/: test_agent.py  test_bridge.py  test_events.py  test_integrations.py  test_tool_registry.py  test_vision.py  test_voice.py
cmd/hugo/: main.go
deploy/: hugo-wake.service  hugo.service
deploy/stt/: requirements.txt
deploy/tts/: requirements.txt
deploy/vllm/: requirements.txt
docs/: GO_GUIDE.md  PLAN.md
docs/adr/: 0001-python-as-primary-language.md  0002-hard-start-stop-model-lifecycle.md  0003-true-barge-in-with-software-aec.md  0004-local-model-stack.md  0005-per-service-python-environments.md  README.md  TEMPLATE.md
frontend/: eslint.config.js  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/: ChatPanel.svelte  QuickActions.svelte  RobotController.svelte  SimulatorView.svelte  StatusBar.svelte  TranscriptLog.svelte  VideoFeed.svelte  VisionPanel.svelte
frontend/src/lib/stores/: chatStore.ts  robotStore.ts  settingsStore.ts  simulatorStore.ts  statusStore.ts  videoStore.ts
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/integrations/: +page.svelte
frontend/src/routes/settings/: +page.svelte
internal/agent/: config.go  hugo.go  tools.go
internal/server/: messages.go  server.go
internal/voice/: pipeline.go  tts.go  types.go
memory/agents/: README.md
memory/sessions/: README.md
openclaw-skills/hugo-tools/: SKILL.md  index.ts  package.json
scripts/: install_systemd_service.sh  setup_service_venv.sh
src/: __init__.py  main.py
src/config/: agents.yaml  tasks.yaml
src/crews/: assistant_crew.py
src/flows/: assistant_flow.py
src/hugo/: __init__.py  cli.py  config.py  dev_cli.py  logging_setup.py  orchestrator.py  wake_listener.py
src/hugo/agent/: llm_client.py  tool_loop.py  web_search.py
src/hugo/memory/: models.py  store.py
src/hugo/robot/: audio_io.py  motion.py  motion_io.py  reachy_client.py
src/hugo/servers/: parakeet_transcriber.py  qwen_tts_synthesizer.py  stt_server.py  tts_server.py
src/hugo/supervisor/: page_cache.py  pidfile.py  process_manager.py
src/hugo/voice/: aec.py  broadcaster.py  chime.py  loop.py  resample.py  stt.py  tts.py  turn.py  vad.py  wake_word.py
src/hugo/voice/assets/: hey_hugo.onnx
src/lib/__tests__/: example.test.ts
src/mcp_servers/: fireflies.py  linear_server.py  ms_graph.py
src/robot/: controller.py
src/router/: intent_router.py
src/tools/: robot_tools.py  vision_tools.py
src/voice/: pipeline.py
tests/: conftest.py  test_crew.py  test_mcp_servers.py  test_router.py  test_tools.py
tests/integration/: test_voice_stack.py
tests/unit/: test_cli.py  test_config.py  test_orchestrator.py
tests/unit/agent/: test_llm_client.py  test_tool_loop.py  test_web_search.py
tests/unit/memory/: test_store.py
tests/unit/robot/: test_audio_io_protocol.py  test_motion.py
tests/unit/supervisor/: test_page_cache.py  test_pidfile.py  test_process_manager.py  test_process_manager_group_kill.py
tests/unit/voice/: fakes.py  test_aec.py  test_broadcaster.py  test_chime.py  test_loop.py  test_motion_cues.py  test_resample.py  test_stt_roundtrip.py  test_tts_roundtrip.py  test_turn.py  test_vad.py  test_wake_from_sleep.py  test_wake_word.py
thoughts/: hugo-rebuild-research.md
thoughts/shared/research/: hugo-architecture-proposal.md  openclaw-research.md  reachy-mini-research.md  voice-vision-research.md
