[project]
name = "hugo"
version = "0.1.0"
description = "HUGO — Voice-first personal assistant for Reachy Mini robot"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
    # Agent framework
    "crewai[tools]>=0.100.0",
    # Robot SDK
    "reachy-mini>=1.0.0",
    # Voice pipeline
    "pipecat-ai>=0.0.60",
    # Semantic routing
    "semantic-router>=0.1.0",
    # MCP SDK
    "mcp[cli]>=1.0.0",
    # Structured outputs
    "pydantic>=2.0",
    # Local ML inference (Apple Silicon)
    "mlx-lm>=0.20.0",
    "mlx-vlm>=0.1.0",
    "mlx-audio>=0.1.0",
    # MS Graph (email, calendar)
    "azure-identity>=1.17.0",
    "msgraph-sdk>=1.5.0",
    # Gemini API (cloud fallback)
    "google-genai>=1.0.0",
    # Anthropic API (hardest tasks)
    "anthropic>=0.40.0",
    # Audio I/O
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    # Async
    "httpx>=0.27.0",
    # Settings
    "pydantic-settings>=2.0.0",
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "bandit>=1.8.0",
]

[project.scripts]
hugo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "semantic_router.*",
    "mcp.*",
    "mlx_lm.*",
    "mlx_vlm.*",
    "mlx_audio.*",
    "reachy_mini.*",
    "pipecat.*",
    "sounddevice.*",
    "google.genai.*",
    "torch.*",
    "PIL.*",
    "msgraph.*",
]
ignore_missing_imports = true

# CrewAI decorators and flows don't have clean type stubs
[[tool.mypy.overrides]]
module = [
    "src.crews.*",
    "src.flows.*",
]
disable_error_code = ["call-arg", "type-var", "misc", "no-untyped-call"]

# MCP servers use dynamic Graph SDK patterns
[[tool.mypy.overrides]]
module = [
    "src.mcp_servers.*",
]
disable_error_code = ["attr-defined", "call-arg", "no-any-return"]

# Voice/robot modules use untyped MLX libraries
[[tool.mypy.overrides]]
module = [
    "src.voice.*",
    "src.robot.*",
    "src.tools.*",
]
disable_error_code = ["no-untyped-call", "type-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
