[project]
name = "hugo-backend"
version = "0.1.0"
description = "HUGO backend – voice, vision, and AI reasoning"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "wsproto>=1.2.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.0.0",
    "sounddevice>=0.5.0",
    "mlx-audio>=0.2.0",
    "google-genai>=1.0.0",
    "torchaudio>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
